--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,8 +10,8 @@ data_ingestion:
 
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
-  base_model_path: artifacts/prepare_base_model/base_model.h5
-  updated_base_model_path: artifacts/prepare_base_model/updated_base_model.h5
+  base_model_path: artifacts/prepare_base_model/base_model.keras
+  updated_base_model_path: artifacts/prepare_base_model/updated_base_model.keras
 
 
 
@@ -19,4 +19,11 @@ prepare_base_model:
 prepare_callbacks:
   root_dir: artifacts/prepare_callbacks
   tensorboard_root_log_dir: artifacts/prepare_callbacks/tensorboard_log_dir
-  checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.h5
+  checkpoint_model_filepath: artifacts/prepare_callbacks/checkpoint_dir/model.keras
+
+
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
+
